# rust-shuttle-file-manage

./: .env  Cargo.toml
crates/lib-auth/: Cargo.toml
crates/lib-core/: Cargo.toml
crates/lib-core/src/middleware/: middleware.rs
crates/lib-entity/: Cargo.toml
crates/lib-entity/src/: file_path.rs  mod.rs  prelude.rs
crates/lib-rpc/: Cargo.toml
crates/lib-utils/: Cargo.toml
crates/lib-utils/src/: lib.rs
crates/lib-utils/src/file/: dir.rs  mod.rs
crates/lib-utils/src/result/: http_result.rs  mod.rs
migration/src/: m20220101_000001_create_table.rs
services/web-server/: Cargo.toml
services/web-server/src/: main.rs
services/web-server/src/file_path/: file_path_params.rs  file_path_router.rs  file_path_service.rs  mod.rs
services/web-server/src/media/: media_params.rs  media_router.rs  media_service.rs  mod.rs
services/web-server/src/system_info/: mod.rs  system_info_response.rs  system_info_router.rs  system_info_service.rs
