[package]
name = "lib-entity"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/mod.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
sea-orm = { version = "0.12.0", features = ["runtime-tokio-rustls","sqlx-mysql"] }
serde = { version = "1.0.197", features = ["derive"] }
