[package]
name = "lib-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }

# -- Tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# -- error
anyhow = "1"

# -- serde
serde = { version = "1.0.197", features = ["derive"] }

# -- entity
lib-entity = { path = "../lib-entity" }

# -- orm
sea-orm = { version = "0.12.0", features = ["runtime-tokio-rustls","sqlx-mysql"] }
chrono = "0.4.38"
