[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# -- App Libs
lib-auth = { path = "../../crates/lib-auth" }
lib-core = { path = "../../crates/lib-core" }
lib-rpc = { path = "../../crates/lib-rpc" }
lib-utils = { path = "../../crates/lib-utils" }
lib-entity = { path = "../../crates/lib-entity" }
migration = { path = "../../migration" }
# -- Async
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# -- Web
axum = { version = "0.7", features = ["macros","default"] }
shuttle-axum = "0.44.0"
shuttle-runtime = "0.44.0"
tower-http = { version = "0.5", features = ["full"] }
tower-cookies = "0.10"
# -- Tracing
tracing = "0.1"
tracing-subscriber = "0.3"
# -- system info
whoami = "1.5.1"
sysinfo = "0.30.10"

# -- builder
derive_builder = "0.20.0"
dotenv = "0.15.0"

# -- orm
sea-orm = { version = "0.12.15", features = ["sqlx-mysql","runtime-tokio-rustls"] }
tower = "0.4.13"
